--- a/IPR_kasa/PageNumerRezerwacji.xaml
+++ b/IPR_kasa/PageNumerRezerwacji.xaml
@@ -10,7 +10,7 @@
 
         <StackPanel >
 
-        <TextBox Text="Wprowadź numer rezerwacji" FontSize="23" TextAlignment="Center" Margin="103,103,103,10" Height="52"/>
+        <TextBox Name ="TxtBox" Text="Wprowadź numer rezerwacji" GotFocus="TextBox_Focused" FontSize="23" TextAlignment="Center" Margin="103,103,103,10" Height="52"/>
         <StackPanel Orientation="Horizontal" Margin="230,40,230,40" Height="89">
 
             <Button  Height="60" Width="80" Margin="40,5" Click="Button_Wroc">
