--- a/IPR_kasa/PageZatwierdzZnizke2.xaml
+++ b/IPR_kasa/PageZatwierdzZnizke2.xaml
@@ -9,7 +9,7 @@
       Title="PageZatwierdzZnizke2">
 
     <StackPanel>
-        <TextBox Text="Wprowadź numer klienta" FontSize="23" TextAlignment="Center" Margin="103,103,103,10" Height="52" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <TextBox x:Name="TxtBox" GotFocus="TextBox_Focused" Text="Wprowadź numer klienta" FontSize="23" TextAlignment="Center" Margin="125,103,132,10" Height="52" HorizontalAlignment="Center" VerticalAlignment="Center" Width="543"/>
         <StackPanel Orientation="Horizontal" Margin="233,40,230,40" Height="89">
             <Button  Height="60" Width="80" Margin="40,14,40,15" Click="Button_Wroc">
                 <TextBlock Text="Wróć" TextWrapping="Wrap" TextAlignment="Center" />
