--- a/IPR_kasa/PageCheckClient2.xaml
+++ b/IPR_kasa/PageCheckClient2.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="IPR_kasa.PageZatwierdzZnizke2"
+﻿<Page x:Class="IPR_kasa.PageCheckClient2"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:IPR_kasa"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="PageZatwierdzZnizke2">
+      Title="PageCheckClient2">
 
     <StackPanel>
         <TextBox x:Name="TxtBox" GotFocus="TextBox_Focused" Text="Wprowadź numer klienta" FontSize="23" TextAlignment="Center" Margin="125,103,132,10" Height="52" HorizontalAlignment="Center" VerticalAlignment="Center" Width="543"/>
