--- a/IPR_kasa/PageCheckReservation.xaml
+++ b/IPR_kasa/PageCheckReservation.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="IPR_kasa.PageNumerRezerwacji"
+﻿<Page x:Class="IPR_kasa.PageCheckReservation"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:IPR_kasa"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="PageNumerRezerwacji">
+      Title="PageCheckReservation">
 
         <StackPanel >
 
