--- a/IPR_kasa/PageChooseSeat.xaml
+++ b/IPR_kasa/PageChooseSeat.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="IPR_kasa.PagePodsumowanie"
+﻿<Page x:Class="IPR_kasa.PageChooseSeat"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,7 +7,7 @@
      
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="PagePodsumowanie">
+      Title="PageChooseSeat">
 
     <Grid>
         <Grid.ColumnDefinitions>
