--- a/IPR_kasa/PageCheckClient.xaml
+++ b/IPR_kasa/PageCheckClient.xaml
@@ -9,7 +9,7 @@
       Title="PageCheckClient">
 
     <StackPanel>
-        <TextBox Text="Wprowadź numer klienta" FontSize="23" TextAlignment="Center" Margin="103,103,103,10" Height="52"/>
+        <TextBox Text="Wprowadź numer klienta" GotFocus="TextBox_Focused" Name="TxtBox" FontSize="23" TextAlignment="Center" Margin="103,103,103,10" Height="52"/>
         <StackPanel Orientation="Horizontal" Margin="434,40,230,40" Height="89">
             <Button  Height="60" Width="80" Margin="40,5" Click="Button_Zaakceptuj">
                 <TextBlock Text="Zaakceptuj" TextWrapping="Wrap" TextAlignment="Center" />
